boreal/tests/assets/invalid_files/compilation/unknown_identifier_ruleset.yar
// [error: unknown identifier "b*"]
rule a1 {
    condition: true
}
rule c {
    condition: all of (a*, b*)
}
